--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+profiling = []
+
 [dependencies]
+ctrlc = "3.4.4"
+lazy_static = "1.4.0"
 term_size = "0.3.2"
