--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2021"
 [features]
 profiling = []
 
+[build-dependencies]
+cc = "1.0.95"
+
 [dependencies]
 ctrlc = "3.4.4"
+image = "0.25.1"
 lazy_static = "1.4.0"
 term_size = "0.3.2"
